// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspect should be possible to introspect all of those files at the same time 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "vin",
      ],
      "updatable": Array [
        "milage",
      ],
    },
    "extends": "DomainEntity",
    "name": "DeliveryVan",
    "properties": Object {
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "make": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "milage": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "model": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "vin": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "year": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "trackingNumber",
      ],
      "updatable": null,
    },
    "extends": "DomainEntity",
    "name": "Package",
    "properties": Object {
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "trackingNumber": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "weight": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [],
      "updatable": Array [
        "status",
        "contactInfo",
      ],
    },
    "extends": "DomainEntity",
    "name": "Delivery",
    "properties": Object {
      "contactInfo": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectPropertyMetadata {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "destination": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainValueObject",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "packages": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectPropertyMetadata {
          "nullable": false,
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Package",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": Array [
          "SCHEDULED",
          "IN_PROGRESS",
          "DELIVERED",
          "FAILED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "van": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainEntity",
          "name": "DeliveryVan",
        },
        "required": true,
        "type": "REFERENCE",
      },
    },
  },
]
`;

exports[`introspect should be possible to introspect the Address file 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`introspect should be possible to introspect the Delivery file 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "vin",
      ],
      "updatable": Array [
        "milage",
      ],
    },
    "extends": "DomainEntity",
    "name": "DeliveryVan",
    "properties": Object {
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "make": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "milage": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "model": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "vin": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "year": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "trackingNumber",
      ],
      "updatable": null,
    },
    "extends": "DomainEntity",
    "name": "Package",
    "properties": Object {
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "trackingNumber": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "weight": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [],
      "updatable": Array [
        "status",
        "contactInfo",
      ],
    },
    "extends": "DomainEntity",
    "name": "Delivery",
    "properties": Object {
      "contactInfo": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectPropertyMetadata {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "destination": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainValueObject",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "packages": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectPropertyMetadata {
          "nullable": false,
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Package",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": Array [
          "SCHEDULED",
          "IN_PROGRESS",
          "DELIVERED",
          "FAILED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "van": DomainObjectPropertyMetadata {
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainEntity",
          "name": "DeliveryVan",
        },
        "required": true,
        "type": "REFERENCE",
      },
    },
  },
]
`;

exports[`introspect should be possible to introspect the DeliveryVan file 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "vin",
      ],
      "updatable": Array [
        "milage",
      ],
    },
    "extends": "DomainEntity",
    "name": "DeliveryVan",
    "properties": Object {
      "id": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "make": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "milage": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "model": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
      "vin": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "year": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
    },
  },
]
`;
